--- a/package.json
+++ b/package.json
@@ -10,23 +10,25 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\" \"src/**/*.scss\""
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
+    "luxon": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0",
     "react-simple-snackbar": "^1.1.11",
-    "react-bootstrap": "^2.4.0",
-    "bootstrap": "^5.2.0"
+    "web-vitals": "^2.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/luxon": "^3.0.0",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "prettier": "^2.7.1",
     "sass": "^1.54.1",
     "typescript": "^4.4.2"
   },
