--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.0",
+    "react-bootstrap-icons": "^1.8.4",
     "luxon": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-simple-snackbar": "^1.1.11",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
